# game-without-a-name-and-unicorns

./: .gitattributes  .gitignore  .gitmodules  default_room.room  game.data  game.html  game.js  initialize_project.py  readme.md
.github/workflows/: build_and_deploy.yml  html_build.yml
assets/: damage_types.json  default_level.lvl  default_room.room  readme.txt  tile_materials.json
assets/entities/: Apple.entity.lua  Bow.entity.lua  DirectionalLight.entity.lua  Enemy.entity.lua  Lamp.entity.lua  NiekTree.entity.lua  Plant.entity.lua  Player.entity.lua  Rainbow.entity.lua  Rope.entity.lua  Test.entity.lua  Test2.entity.lua  Tree.entity.lua  Water.entity.lua
assets/entities/arrows/: Arrow.entity.json  Arrow.entity.lua  RainbowArrow.entity.json  RainbowArrow.entity.lua
assets/entities/body_parts/: Arm.entity.lua  Head.entity.lua  Leg.entity.lua
assets/entities/foliage/: NiekTree.entity.lua  Plant.entity.lua  Tree.entity.lua
assets/entities/helpers/: SpriteAnchor.entity.lua
assets/entities/light/: DirectionalLight.entity.lua  Lamp.entity.lua
assets/entities/particles/: RainbowParticle.entity.lua  TreeLeaveParticle.entity.lua
assets/entities/weapons/: Bow.entity.lua
assets/entity_templates/: Bow.entity.json  Lamp.entity.json  Rope.entity.json  Test.entity.lua  Test2.entity.lua
assets/fonts/ruda/: SIL Open Font License.txt
assets/levels/: default_level.lvl
assets/models/: default_bg.ubj  example.ubj  key.ubj
assets/palettes/: default0.gpl  default1.gpl  default2.gpl  default_bloom.gpl  palettes.json  test0.gpl  test1.gpl  test2.gpl  test_bloom.gpl  water0.gpl  water1.gpl  water2.gpl  water_bloom.gpl
assets/scripts/: fast_startup.lua  lib.lua
assets/scripts/entities/: Enemy.lua  Player.lua
assets/scripts/tmp/: Tree.branches.lua  Tree.config.lua
assets/scripts/ui_screens/: LevelScreen.lua  LevelSelectScreen.lua  StartupScreen.lua
assets/scripts/util/: functionalState.lua  math.lua  string_utils.lua  wrappert.lua
assets/shaders/: 3d_model.frag  3d_model.vert  apply_palette.frag  apply_palette.vert  debug_depth_buffer.frag  fullscreen_quad.vert  horizontal_gaussian_blur.frag  normaltest.frag  polyline.frag  polyline.vert  post_processing.frag  sprite.frag  sprite.vert  test.frag  test.vert  wide_polyline.vert
assets/shaders/blood_splatter/: blood_drop.frag  blood_drop.vert
assets/shaders/combat/: arrow_reflected.frag  combat_effect.vert  damage_flash.frag
assets/shaders/fire/: combine.frag  particle.frag  particle.vert
assets/shaders/fluids/: reflectionTrapezoid.frag  reflectionTrapezoid.vert  trapezoid.frag  trapezoid.vert
assets/shaders/light/: directional_light.frag  directional_light.vert  light_map.frag  light_map.vert  point_light.frag  point_light.vert  shadow.frag  shadow.vert  shadow_debug.frag
assets/shaders/screen_transition/: cutoff_texture.frag  cutoff_texture_rainbow.frag
assets/shaders/shadow/: shadow.frag  shadow.vert  shadow_debug.frag
assets/shaders/tile_map/: tile.frag  tile.vert  tile_map.frag  tile_map.vert
assets/shaders/ui/: 9slice.frag  9slice.vert  apply_palette.frag  text.frag  text.vert
assets/sounds/: attributions.md
assets/sprites/: apple.ase  arrow.ase  axolotl.ase  bow.ase  bricks.tileset.ase  bubble.ase  chest.ase  dust_trails.ase  end_door.ase  enemy.ase  fire_enemy.ase  fire_enemy_tail.ase  lamp.ase  lava_bubble.ase  plant.ase  player_body.ase  player_head.ase  rainbow_particle.ase  rope_bridge.ase  test.ase  tileset_bricks.ase  tree_leaves.ase
assets/sprites/menu/: font.ase  menu.ase
assets/sprites/tilesets/: bricks.tileset.ase  bricks_background.tileset.ase  grass.tileset.ase
assets/sprites/ui/: arrow_type_bar_9slice.ase  arrow_type_icons.ase  button.ase  default_9slice_plane.ase  default_font.ase  default_font_no_shadow.ase  heart.ase  hp_bar_9slice.ase  hud_border.ase  key_icon.ase  you_died_plane.ase
blender/: default_bg.blend  key.blend
desktop/: CMakeLists.txt
html/: CMakeLists.txt  index.html
source/: Game.cpp  Game.h  ImGuiStyle.h  LevelScreen.h  RoomScreen.h  luau.cpp  luau.h  main.cpp
source/ecs/: EntityEngine.cpp  EntityEngine.h  EntityInspector.cpp  EntityInspector.h  EventEmitter.cpp  EventEmitter.h
source/ecs/components/: Audio.yaml  Children.h  Children.yaml  Fire.yaml  Inspecting.yaml  LuaScript.h  LuaScripted.h  LuaScripted.yaml  Networked.h  Networked.yaml  PlatformerMovement.h  PlatformerMovement.yaml  PlayerControlled.h  PlayerControlled.yaml  Polyline.h  Polyline.yaml  Rainbow.h  Rainbow.yaml  Saving.h  Saving.yaml  SoundSpeaker.h  SoundSpeaker.yaml  Spawning.h  Spawning.yaml  Sprinkler.yaml  TransRoomable.h  TransRoomable.yaml  component_methods.cpp  component_methods.h
source/ecs/entity_templates/: EntityTemplate.cpp  EntityTemplate.h  LuaEntityTemplate.cpp  LuaEntityTemplate.h
source/ecs/systems/: AudioSystem.h  ChildrenSystem.h  EntitySystem.h  FireSystem.cpp  FireSystem.h  LuaScriptsSystem.cpp  LuaScriptsSystem.h  PlatformerMovementSystem.h  PlayerControlSystem.h  PositionedAudioSystem.cpp  PositionedAudioSystem.h  RainbowSystem.cpp  RainbowSystem.h  (+6 more)
source/game/: Game.cpp  Game.h  Game.yaml  GameSettings.yaml  SaveGame.cpp  SaveGame.h
source/level/: DebugTileRenderer.h  Level.cpp  Level.h  Room.cpp  Room.h  RoomEditor.h  RoomOutliner.cpp  RoomOutliner.h
source/macro_magic/: SerializableStructInfo.h  component.cpp  component.h  enum.h  includes_for_generated_structs.h  json_converters.h  json_reflectable.cpp  json_reflectable.h  lua_converters.cpp  lua_converters.h  macro_helpers.h  serializable.cpp  serializable.h  serializable_from_lua_table.h  sfinae.h
source/multiplayer/: MultiplayerLobby.cpp  MultiplayerLobby.h  Player.h  packets.h
source/rendering/: GameScreen.cpp  GameScreen.h  ImGuiStyle.h  LevelEditor.cpp  LevelEditor.h  LevelScreen.cpp  LevelScreen.h  MegaSpriteSheet.h  MiniMapTextureGenerator.cpp  MiniMapTextureGenerator.h  Palette.cpp  Palette.h  PaletteEditor.cpp  PaletteEditor.h  PolylineRenderer.cpp  PolylineRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h
source/tiled_room/: TileMap.cpp  TileMap.h  TiledRoom.cpp  TiledRoom.h
(+414 files in other folders)
